Update todo method -> PATCH
