# docs/swagger.yaml
@@ -17,20 +17,13 @@ definitions:
       todoId:
         type: integer
     type: object
-  api.updateTodoStatusRequestBody:
+  api.updateTodoRequestBody:
     properties:
       status:
         type: string
-    required:
-    - status
-    type: object
-  api.updateTodoTitleRequestBody:
-    properties:
       title:
         maxLength: 255
         type: string
-    required:
-    - title
     type: object
   db.Todo:
     properties:
@@ -119,30 +112,6 @@ paths:
         "500":
           description: Internal Server Error
       summary: Creates a Todo
-      tags:
-      - todos
-  /todos/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Delete todo by TodoID
-      parameters:
-      - description: Todo ID
-        in: path
-        minimum: 1
-        name: id
-        required: true
-        type: integer
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
-        "500":
-          description: Internal Server Error
-      summary: Deletes a Todo
       tags:
       - todos
   /todos/{id}/attachments:
@@ -244,75 +213,30 @@ paths:
       summary: Delete attachment
       tags:
       - attachments
-  /todos/{id}/status:
-    post:
-      consumes:
-      - application/json
-      description: Updates the todo status
-      parameters:
-      - description: Todo ID
-        in: path
-        minimum: 1
-        name: id
-        required: true
-        type: integer
-      - description: Todo status
-        in: body
-        name: todo
-        required: true
-        schema:
-          $ref: '#/definitions/api.updateTodoStatusRequestBody'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/db.Todo'
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
-        "500":
-          description: Internal Server Error
-      summary: Updated the todo status
-      tags:
-      - todos
-  /todos/{id}/title:
-    post:
-      consumes:
-      - application/json
-      description: Updates the todo title
-      parameters:
-      - description: Todo ID
-        in: path
-        minimum: 1
-        name: id
-        required: true
-        type: integer
-      - description: Todo title
-        in: body
-        name: todo
-        required: true
-        schema:
-          $ref: '#/definitions/api.updateTodoTitleRequestBody'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/db.Todo'
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
-        "500":
-          description: Internal Server Error
-      summary: Updated the todo title
-      tags:
-      - todos
   /todos/{todoId}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete todo by TodoID
+      parameters:
+      - description: Todo ID
+        in: path
+        minimum: 1
+        name: todoId
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Deletes a Todo
+      tags:
+      - todos
     get:
       description: Get todo by TodoID
       parameters:
@@ -336,6 +260,39 @@ paths:
         "500":
           description: Internal Server Error
       summary: Returns a Todo
+      tags:
+      - todos
+    patch:
+      consumes:
+      - application/json
+      description: Updates the todo title/status
+      parameters:
+      - description: Todo ID
+        in: path
+        minimum: 1
+        name: todoId
+        required: true
+        type: integer
+      - description: Todo title/status
+        in: body
+        name: todo
+        required: true
+        schema:
+          $ref: '#/definitions/api.updateTodoRequestBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/db.Todo'
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Updated the todo title/status
       tags:
       - todos
   /todos/{todoId}/attachments/{attachmentId}:
